cập nhật tìm kiếm danh mục

--- a/kltn/client/public/index.html
+++ b/kltn/client/public/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/assets/images/favicon.png">
-  <title>ListOn - Directory & Listing HTML Template</title>
+  <title>Southwest travel</title>
   <link href="/assets/plugins/aos/aos.min.css" rel="stylesheet">
   <link href="/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/assets/plugins/fontawesome/css/all.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
  
 </head>
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Southwest travel</noscript>
   <div id="root"></div>
   <div id="mapcanvas"></div>
   <!--
@@ -82,8 +82,34 @@
     <script src="/assets_admin/dist/js/dashboard.js"></script>
     <script src="/assets_admin/dist/ckeditor/ckeditor.js"></script>
     <script src="https://kit.fontawesome.com/a557024320.js" crossorigin="anonymous"></script>
+    <!-- Add Facebook SDK -->
+<!--   
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0&appId=2851281615023125&autoLogAppEvents=1"></script>
+      -->
+     <!-- Disqus universal code -->
+  <!-- <div id="disqus_thread"></div>
+  <script>
+    var disqus_config = function () {
+      this.page.url = window.location.href;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = window.location.pathname; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+
+    (function() {
+      var d = document, s = d.createElement('script');
+      s.src = 'https://mytouristspot.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+  <noscript>
+    Please enable JavaScript to view the
+    <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+  </noscript> -->
+
+    
     <!-- <script
-    src="https://maps.googleapis.com/maps/api/js?AIzaSyANES0dY-8HEQJEWJ7luJ6ywM0rdp-CzNc&callback=initMap"
+
     async
     defer
   ></script>
